moved Geometry to lib

--- a/javascript/unittest/testHexMapView.html
+++ b/javascript/unittest/testHexMapView.html
@@ -38,7 +38,7 @@
 	>
 
     <!-- this has to be included in the body of the HTML document -->
-    <script type="text/javascript" src="../src/Geometry.js"></script>
+    <script type="text/javascript" src="../lib/Geometry.js"></script>
 
     <h1>Testing Hexmap View</h1>
     <div id='map'></div>
