adding hex map vector tests

--- a/javascript/unittest/testHexMapVector.html
+++ b/javascript/unittest/testHexMapVector.html
@@ -4,7 +4,7 @@
     <script language="JavaScript" src="/jsunit/app/jsUnitCore.js"></script>
     <script language="JavaScript" src="../src/Iterator.js"></script>
     <script language="JavaScript" src="../src/HexMap.js"></script>
-    <script language="JavaScript" src="./testHexMap.js"></script>
+    <script language="JavaScript" src="./testHexMapVector.js"></script>
   </head>
   <body>
     <p style="text-align: center;">Test HexMap Vector Object</p>
