--- a/javascript/unittest/testHexMapViewSimple.html
+++ b/javascript/unittest/testHexMapViewSimple.html
@@ -19,8 +19,40 @@
 
     <!-- special for this page -->
     <script type="text/javascript" src="testHexMapViewSimple.js" ></script>    
+
+    <style type="text/css">
+      canvas {
+        border-style: solid;
+        border-width: 2px;
+      }
+    </style>
+
   </head>
-  <body>
-    <h1 style="text-align: center;">Simple Hex Map View</h1>
+  <body style="text-align: center;" 
+	onload="mapview.setParent(document.getElementById('mapcanvas')) ; mapview.draw();"
+	>
+
+
+    <!-- this has to be included in the body of the HTML document -->
+    <script type="text/javascript" src="../lib/Geometry.js"></script>
+
+    <h1>Testing Hexmap View Simple</h1>
+    <div id='mapcanvas'></div>
+    <hr />
+    <h1>Status</h1>
+    <div id='status'></div>
+    <p>
+    Click Point: <span id="clickpoint">No click yet</span><br>
+    Canvas Corner: <span id="canvascorner">No click yet</span><br>
+    Scroll Corner: <span id="scrollcorner">No click yet</span><br>
+    Canvas Point: <span id="canvaspoint">No click yet</span><br>
+    Reference Hex: <span id="refhex">No click yet</span><br>
+    Reference Triangle: <span id="reftriangle">No click yet</span><br>
+    Click Hex: <span id="clickhex">No click yet</span>
+    </p>
+    
+
+
+
   </body>
 </html>
