start trying real unit tests for HexMap to verify origin offsets

--- a/javascript/unittest/testHexMap.html
+++ b/javascript/unittest/testHexMap.html
@@ -1,9 +1,16 @@
 <html>
   <head>
+    <!-- parseUri provided bt Steven Levithan 
+	 http://stevenlevithan.com/demo/parseuri/js/assets/parseuri.js
+    -->
+    <script type="text/javascript" src="../lib/parseuri.js"></script>
+
     <title>Test HexMap Object</title>
     <script language="JavaScript" src="/jsunit/app/jsUnitCore.js"></script>
     <script language="JavaScript" src="../src/Iterator.js"></script>
     <script language="JavaScript" src="../src/HexMap.js"></script>
+    <script language="JavaScript" src="../src/HexMapView.js"></script>
+    <script language="JavaScript" src="../src/TerrainLib.js"></script>
     <script language="JavaScript" src="./testHexMap.js"></script>
   </head>
   <body>
