just use relative path to js file

--- a/javascript/unittest/testHexMapView.html
+++ b/javascript/unittest/testHexMapView.html
@@ -12,7 +12,7 @@
     <script language="JavaScript" src="../src/HexMap.js"></script>
     <script language="JavaScript" src="../src/HexMapView.js"></script>
     <script language="JavaScript" src="../src/TerrainLib.js"></script>
-    <script language="JavaScript" src="./testHexMapView.js"></script>
+    <script language="JavaScript" src="testHexMapView.js"></script>
   </head>
   <body>
     <p style="text-align: center;">Test HexMapView Object</p>
