shift image to one side

--- a/javascript/unittest/testHexMapViewSimple.html
+++ b/javascript/unittest/testHexMapViewSimple.html
@@ -36,7 +36,7 @@
     <script type="text/javascript" src="../lib/Geometry.js"></script>
 
     <h1>Testing Hexmap View Simple</h1>
-    <div id='mapcanvas'></div>
+    <div id='mapcanvas' style="float: left;"></div>
     <hr />
     <h1>Status</h1>
     <div id='status'></div>
