starting to add offset catan map stuff

--- a/javascript/unittest/testCatan.html
+++ b/javascript/unittest/testCatan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
   <head>
-    <title>Simple Map Test</title>
+    <title>Catan Map Test</title>
 
     <!-- parseUri provided bt Steven Levithan 
 	 http://stevenlevithan.com/demo/parseuri/js/assets/parseuri.js
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="../src/TerrainLib.js" ></script>
 
     <!-- special for this page -->
-    <script type="text/javascript" src="testHexMapViewSimple.js" ></script>    
+    <script type="text/javascript" src="testCatan.js" ></script>    
 
     <style type="text/css">
       canvas {
@@ -35,7 +35,7 @@
     <!-- this has to be included in the body of the HTML document -->
     <script type="text/javascript" src="../lib/Geometry.js"></script>
 
-    <h1>Testing Hexmap View Simple</h1>
+    <h1>Testing Catan Map</h1>
     <div id='mapcanvas' style="float: left;"></div>
     <!--
     <hr />
