add sea hexes and subclass to draw them

--- a/javascript/unittest/testCatan.html
+++ b/javascript/unittest/testCatan.html
@@ -16,6 +16,9 @@
     <script type="text/javascript" src="../src/HexMapView.js" ></script>
     <script type="text/javascript" src="../src/TerrainLib.js" ></script>
 
+    <!-- Catan classes -->
+    <script type="text/javascript" src="../src/CatanLib.js" ></script>
+
     <!-- special for this page -->
     <script type="text/javascript" src="testCatan.js" ></script>    
 
